<resources>
    <string name="app_name">Meet Sports</string>

    <string name="btn_createEvent">Create</string>
    <string name="EditProfileDialogFragment">Open Alert DialogFragment</string>
    <!-- CreateEventActivity -->
    <string name="category_prompt">Select a category</string>
    <string name="type_prompt">Select a type</string>
    <string name="level_prompt">Select a level</string>

    <string-array name="category_array">
        <item>Football</item>
        <item>Running</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="type_array">
        <item>For fun</item>
        <item>Match</item>
        <item>Practice</item>
    </string-array>

    <string-array name="participants_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>10+</item>
    </string-array>

    <string-array name="level_array">
        <item>Any</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Expert</item>
    </string-array>

    <string name="btn_datePicker">Set date</string>
    <string name="btn_timePicker">Set time</string>

    <string name="date_result">textView_participants_result</string>
    <string name="time_result">textView_participants_result</string>
    <string name="duration_result">textView_duration_result</string>
    <string name="participants_result">textView_participants_result</string>
    <string name="age_result">textView_participants_result</string>
    <string name="contribution_result">textView_participants_result</string>
    <string name="level_result">textView_participants_result</string>

    <!-- FindEventActivity -->
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>


    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <string name="profile_name">Name</string>
    <string name="profile_edit_name">Edit username</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_edit_surname">Edit username</string>
    <string name="profile_age">Surname</string>
    <string name="profile_edit_age">Edit username</string>
</resources>