<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gti350.lab.meetsports.CreateEventActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Step 1/3"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="Category"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category_array"
            android:prompt="@string/category_prompt"
            android:textAlignment="textEnd"
            android:textColor="@color/create_event" />

        <TextView
            android:id="@+id/textView_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="Type"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type_array"
            android:prompt="@string/type_prompt"
            android:textAlignment="textEnd"
            android:textColor="@color/create_event" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="Date"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_date_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_result"
            android:textAlignment="textEnd"
            android:textColor="@color/create_event"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_datePicker"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:onClick="showDatePickerDialog"
            android:text="@string/btn_datePicker" />

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="Time"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_time_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_result"
            android:textAlignment="textEnd"
            android:textColor="@color/create_event"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_timePicker"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:onClick="showTimePickerDialog"
            android:text="@string/btn_timePicker" />

        <TextView
            android:id="@+id/textView_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Duration"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_duration_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration_result"
            android:textAlignment="textEnd"
            android:textColor="@color/create_event"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <com.appyvet.rangebar.RangeBar xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rangebar_duration"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            custom:barWeight="3dp"
            custom:connectingLineColor="@color/colorConnectingLine"
            custom:connectingLineWeight="3dp"
            custom:pinColor="@color/colorPin"
            custom:pinMaxFont="12sp"
            custom:pinRadius="15sp"
            custom:rangeBar="false"
            custom:rangeBarColor="@color/colorRangebar"
            custom:selectorColor="@color/colorSelector"
            custom:selectorSize="8sp"
            custom:tickEnd="5"
            custom:tickInterval="0.2"
            custom:tickStart="0" />
    </LinearLayout>

</RelativeLayout>