<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gti350.lab.meetsports.CreateEventActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Step 2/3"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Participants"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_participants_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants_result"
            android:textAlignment="textEnd"
            android:textColor="@color/create_event"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <com.appyvet.rangebar.RangeBar xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rangebar_participants"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            custom:barWeight="3dp"
            custom:connectingLineColor="@color/colorConnectingLine"
            custom:connectingLineWeight="3dp"
            custom:pinColor="@color/colorPin"
            custom:pinMaxFont="12sp"
            custom:pinRadius="15sp"
            custom:rangeBarColor="@color/colorRangebar"
            custom:selectorColor="@color/colorSelector"
            custom:selectorSize="8sp"
            custom:tickEnd="11"
            custom:tickInterval="1"
            custom:tickStart="1" />

        <TextView
            android:id="@+id/textView_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Age range"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_age_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_result"
            android:textAlignment="textEnd"
            android:textColor="@color/create_event"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <com.appyvet.rangebar.RangeBar xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rangebar_age"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            custom:barWeight="3dp"
            custom:connectingLineColor="@color/colorConnectingLine"
            custom:connectingLineWeight="3dp"
            custom:pinColor="@color/colorPin"
            custom:pinMaxFont="12sp"
            custom:pinRadius="15sp"
            custom:rangeBarColor="@color/colorRangebar"
            custom:selectorColor="@color/colorSelector"
            custom:selectorSize="8sp"
            custom:tickEnd="36"
            custom:tickInterval="1"
            custom:tickStart="18" />

        <TextView
            android:id="@+id/textView_contribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contribution"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView_contribution_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contribution_result"
            android:textAlignment="textEnd"
            android:textColor="@color/create_event"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <com.appyvet.rangebar.RangeBar xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rangebar_contribution"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            custom:barWeight="3dp"
            custom:connectingLineColor="@color/colorConnectingLine"
            custom:connectingLineWeight="3dp"
            custom:pinColor="@color/colorPin"
            custom:pinMaxFont="12sp"
            custom:pinRadius="15sp"
            custom:rangeBarColor="@color/colorRangebar"
            custom:selectorColor="@color/colorSelector"
            custom:selectorSize="8sp"
            custom:tickEnd="21"
            custom:tickInterval="1"
            custom:tickStart="0" />

        <TextView
            android:id="@+id/textView_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Level"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <Spinner
            android:id="@+id/spinner_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="@color/create_event"
            android:entries="@array/level_array"
            android:prompt="@string/level_prompt"
            android:textAlignment="textEnd" />

    </LinearLayout>

</RelativeLayout>